# CCXT-Backtest

./: LICENSE  README.md  pyproject.toml
src/ccxtbacktester/: __init__.py
